--- a/iCloudCalendarSample/Base.lproj/Main.storyboard
+++ b/iCloudCalendarSample/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
                                     <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnCancelPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="mWd-XV-xJn"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="eLj-mn-AU4">
                                 <rect key="frame" x="235" y="517" width="73" height="30"/>
